# geodesic-computation

./: CMakeLists.txt  FMM.cpp  FMM.h  README.md  SurfaceMeshRenderLines.h  main.cpp
OpenGP/: README.md
cmake/: ConfigureCompiler.cmake  ConfigureEigen3.cmake  ConfigureGLEW.cmake  ConfigureGLFW3.cmake  ConfigureOpenGL.cmake  ConfigureOpenGP.cmake  FindEigen3.cmake  FindGLFW3.cmake  FindOpenGP.cmake
src/: FMMPriorityQueue.cpp  FMMPriorityQueue.h  GeodesicInHeat.cpp  GeodesicInHeat.h  Method.h  SurfaceMeshRenderGeodesic.h  main.cpp
